force-app/main/default/objects/Service_Schedule__c/fields/Other_Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Other_Service_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Other Service Provider</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Schedules (Other Service Provider)</relationshipLabel>
    <relationshipName>Service_Schedules1</relationshipName>
    <type>Lookup</type>
</CustomField>