force-app/main/default/objects/Service_Schedule__c/fields/Primary_Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Primary_Service_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Service Provider</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Schedules</relationshipLabel>
    <relationshipName>Service_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>